--- a/.vim/dein/dein_lazy.toml
+++ b/.vim/dein/dein_lazy.toml
@@ -33,4 +33,7 @@ on_ft = ['javascript']
 [[plugins]]
 repo = 'plasticboy/vim-markdown'
 on_ft = ['markdown']
-
+hook_source = '''
+    let g:vim_markdown_conceal = 0
+    let g:vim_markdown_conceal_code_blocks = 0
+'''
