--- a/.vim/dein/dein_lazy.toml
+++ b/.vim/dein/dein_lazy.toml
@@ -37,3 +37,8 @@ hook_source = '''
     let g:vim_markdown_conceal = 0
     let g:vim_markdown_conceal_code_blocks = 0
 '''
+
+[[plugins]]
+repo = 'slim-template/vim-slim'
+on_ft = ['slim']
+
