--- a/.vim/dein/dein.toml
+++ b/.vim/dein/dein.toml
@@ -92,6 +92,10 @@ hook_add = 'let g:loaded_matchparen = 1'
 repo = 'itchyny/vim-cursorword'
 
 [[plugins]]
+repo = 'junegunn/fzf.vim'
+hook_add = 'source ~/.vim/config/plugins/plugins-fzf.vim'
+
+[[plugins]]
 repo = 'junegunn/vim-easy-align'
 hook_add = '''
   " Start interactive EasyAlign in visual mode (e.g. vip<Enter>)
