--- a/.byobu/.tmux.conf
+++ b/.byobu/.tmux.conf
@@ -1,4 +1,4 @@
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set display-panes-time 3000
+set -g display-panes-time 3000
