Fixed configration for nvim.

--- a/.vim/dein/dein_lazy.toml
+++ b/.vim/dein/dein_lazy.toml
@@ -42,3 +42,6 @@ hook_source = '''
 repo = 'slim-template/vim-slim'
 on_ft = ['slim']
 
+[[plugins]]
+repo = 'aklt/plantuml-syntax'
+on_ft = ['plantuml']
