--- a/.vim/dein/dein.toml
+++ b/.vim/dein/dein.toml
@@ -60,7 +60,7 @@ repo = 'autozimu/LanguageClient-neovim'
 if   = '''has('unix')'''
 rev = 'next'
 build = 'bash install.sh'
-hook_add ='source ~/.vim/config/plugins/plugins-LanguageClient-neovim.vim'
+hook_add = 'source ~/.vim/config/plugins/plugins-LanguageClient-neovim.vim'
 
 [[plugins]]
 repo = 'easymotion/vim-easymotion'
@@ -109,11 +109,10 @@ repo = 'maximbaz/lightline-ale'
 
 [[plugins]]
 repo = 'mrtazz/DoxygenToolkit.vim'
-hook_add = 'let g:DoxygenToolkit_paramTag_pre="@param [in]	"'
 hook_add = '''
-  let g:DoxygenToolkit_paramTag_pre ="@param [in]	"
-  let g:DoxygenToolkit_startCommentTag="/**"
-  let g:DoxygenToolkit_startCommentBlock="/*"
+  let g:DoxygenToolkit_paramTag_pre = "@param [in]	"
+  let g:DoxygenToolkit_startCommentTag = "/**"
+  let g:DoxygenToolkit_startCommentBlock = "/*"
 '''
 
 [[plugins]]
