--- a/.byobu/.tmux.conf
+++ b/.byobu/.tmux.conf
@@ -2,3 +2,6 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g display-panes-time 3000
+
+# for neovim. notify focus
+set-option -g focus-events on
