--- a/.byobu/.tmux.conf
+++ b/.byobu/.tmux.conf
@@ -5,3 +5,39 @@ set -g display-panes-time 3000
 
 # for neovim. notify focus
 set-option -g focus-events on
+
+# active pain
+setw -g window-active-style bg=colour8
+# non active window
+setw -g window-style bg=colour0
+
+# https://github.com/seebi/tmux-colors-solarized
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-style fg=yellow,bg=colour8 #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour8 #base02
+set-option -g pane-active-border-style fg=brightgreen #base01
+
+# message text
+set-option -g message-style fg=brightred,bg=colour8 #orange and base01
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour8,bg=red #base02, red
