Modified fish and tmux configuration.

--- a/.byobu/.tmux.conf
+++ b/.byobu/.tmux.conf
@@ -7,23 +7,26 @@ set -g display-panes-time 3000
 set-option -g focus-events on
 
 # active pain
-setw -g window-active-style bg=colour8
+set-window-option -g window-active-style bg=colour8
 # non active window
-setw -g window-style bg=colour0
+set-window-option -g window-style bg=colour236
 
 # https://github.com/seebi/tmux-colors-solarized
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
-set-option -g status-style fg=yellow,bg=colour8 #yellow and base02
+set-option -g status-style fg=yellow,bg=black
 
 # default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+set-window-option -g window-status-style fg=brightblue,bg=default
 #set-window-option -g window-status-style dim
 
 # active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+set-window-option -g window-status-current-style fg=green,bg=default,reverse
 #set-window-option -g window-status-current-style bright
+
+# activity window title colors
+set-window-option -g window-status-activity-style fg=brightyellow,bg=default,reverse
 
 # pane border
 set-option -g pane-border-style fg=colour8 #base02
