--- a/.config/byobu/.tmux.conf
+++ b/.config/byobu/.tmux.conf
@@ -1,10 +1,17 @@
+# .tmux.conf
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g display-panes-time 3000
 
-# for neovim. notify focus
-set-option -g focus-events on
+# for neovim
+# 画面分割したときにゴミが残るので一旦コメント
+# set-option -g focus-events on
+
+# ウィンドウ分割後もカレントディレクトリに留まる
+#bind c new-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind % split-window -v -c "#{pane_current_path}"
 
 # active pain
 set-window-option -g window-active-style bg=colour8
