Update sample file.

--- a/helper/.env.example
+++ b/helper/.env.example
@@ -1,5 +1,5 @@
 #!/bin/bash
 
-VERSION_FISH="3.5.0"
-VERSION_NVIM="0.8.0"
-VERSION_NODE="16.14.2"
+VERSION_FISH=""
+VERSION_NVIM=""
+VERSION_NODE=""
